hphp/hack/test/typecheck/new_inference/prop_access_lambda_nullsafe.php.exp
WARN: File "prop_access_lambda_nullsafe.php", line 9, characters 31-36:
You are using the `?->` operator but this value is always null. It's likely you did not intend this value to be always null. (Warn[12030])
ERROR: File "prop_access_lambda_nullsafe.php", line 10, characters 6-7:
Invalid argument (Typing[4110])
  File "prop_access_lambda_nullsafe.php", line 9, characters 23-28:
  Expected `string`
  File "prop_access_lambda_nullsafe.php", line 5, characters 38-40:
  But got `int`
ERROR: File "prop_access_lambda_nullsafe.php", line 10, characters 6-7:
Invalid argument (Typing[4110])
  File "prop_access_lambda_nullsafe.php", line 9, characters 31-32:
  Expected `?_`
  File "prop_access_lambda_nullsafe.php", line 8, characters 14-15:
  But got `<expr#2> as A`
  File "prop_access_lambda_nullsafe.php", line 10, characters 6-7:
    where `<expr#2>` is a reference to this expression
ERROR: File "prop_access_lambda_nullsafe.php", line 10, characters 6-7:
Invalid argument (Typing[4110])
  File "prop_access_lambda_nullsafe.php", line 9, characters 31-36:
  Expected `null` (use of `?->` operator)
  File "prop_access_lambda_nullsafe.php", line 8, characters 15-15:
  But got `A`
